--- a/index.html
+++ b/index.html
@@ -31,42 +31,45 @@
     <div class="top-page">
       <div class="no-use"></div>
 
-      <nav class="navbar navbar-expand-lg navbar-light p-0" style="background-color: #ec524b; color: white;">
-        <a class="navbar-brand text-white" href="#"><span class="nav-brand">tindog</span></a>
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-light p-0" style="background-color: #ec524b; color: white;">
+          <a class="navbar-brand text-white" href="#"><span class="nav-brand">tindog</span></a>
+  
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active brand-custom pr-4">
+                <a class="nav-link top_link text-white-50" href="#">Contact <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item brand-custom pr-4">
+                <a class="nav-link top_link text-white-50" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link top_link text-white-50" href="#">Download</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+      
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active brand-custom pr-4">
-              <a class="nav-link top_link text-white-50" href="#">Contact <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item brand-custom pr-4">
-              <a class="nav-link top_link text-white-50" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link top_link text-white-50" href="#">Download</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-      <div class="container mw-100 ">
+      <div class="container mw-100">
         <div class="row mw-100">
-          <div class="col-xl text-sm-left px-0 text-wrap">
+          <div class="col-md-6 text-wrap my-col">
             <p class="top-text pt-5 text-wrap">
               Meet new and interesting dogs nearby.
             </p>
 
-
-            <button type="button" class="btn btn-dark btn-lg my-btn my-top-btn">Download</button>
-            <button type="button" class="btn btn-outline-light btn-lg my-top-btn">Download</button>
-
+            <div class="" style="display: flex; align-items: flex-start;">
+              <button type="button" class="btn btn-dark btn-lg my-btn my-ttop-btn">Download</button>
+              <button type="button" class="btn btn-outline-light btn-lg my-top-btn">Download</button>
+            </div>
 
           </div>
-          <div class="col-xl">
+          <div class="col-md-6 my-col">
             <img src="TinDog-Start-master/TinDog-Start-master/images/iphone6.png" class="phone-img pt-5" alt="phone"
               height="70%" />
           </div>
@@ -250,9 +253,9 @@
 
   </section>
 
-  <section class="mobile-end-section">
-
-  </section>
+  <div class="mobile-end-section">
+    
+  </div>
 
 
 
